--- a/DreamsTech/build_win/DreamsTech.vcxproj.filters
+++ b/DreamsTech/build_win/DreamsTech.vcxproj.filters
@@ -13,6 +13,16 @@
     <ClCompile Include="D:\Projects\Active\DreamsTech\DreamsTech\cocos2d\cocos\precheader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Int2.cpp">
+      <Filter>Source Files\Classes\Types</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneralSettings.cpp">
+      <Filter>Source Files\Classes\Settings\General</Filter>
+    </ClCompile>
+    <ClCompile Include="UiManagerBase.cpp">
+      <Filter>Source Files\Classes\UI\Manager\Base</Filter>
+    </ClCompile>
+    <ClCompile Include="UiManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="D:\Projects\Active\DreamsTech\DreamsTech\Classes\AppDelegate.h">
@@ -45,6 +55,16 @@
     <ClInclude Include="D:\Projects\Active\DreamsTech\DreamsTech\Resources\res\.gitkeep">
       <Filter>Resources\res</Filter>
     </ClInclude>
+    <ClInclude Include="Int2.h">
+      <Filter>Source Files\Classes\Types</Filter>
+    </ClInclude>
+    <ClInclude Include="GeneralSettings.h">
+      <Filter>Source Files\Classes\Settings\General</Filter>
+    </ClInclude>
+    <ClInclude Include="UiManagerBase.h">
+      <Filter>Source Files\Classes\UI\Manager\Base</Filter>
+    </ClInclude>
+    <ClInclude Include="UiManager.h" />
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="D:\Projects\Active\DreamsTech\DreamsTech\CMakeLists.txt" />
@@ -72,6 +92,24 @@
     </Filter>
     <Filter Include="Source Files\proj.win32">
       <UniqueIdentifier>{6B08DF57-10B1-34B7-B1CC-4750F8CFE90C}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Classes\Settings">
+      <UniqueIdentifier>{c9f1977a-c3ca-410b-b099-99abacd526c7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Classes\Settings\General">
+      <UniqueIdentifier>{a805bf43-0160-4440-b1ca-d4dea4626507}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Classes\Types">
+      <UniqueIdentifier>{9a1c716b-a436-45a4-9600-6052ded1448e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Classes\UI">
+      <UniqueIdentifier>{50410a76-1564-4d81-bf16-07c6369d9dd8}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Classes\UI\Manager">
+      <UniqueIdentifier>{8646471e-d103-4006-b0f1-3e2f7eb1bba4}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Classes\UI\Manager\Base">
+      <UniqueIdentifier>{776ea27d-ff94-4cf0-a31c-5b87a1eb6ddb}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
