--- a/DreamsTech/build_win/DreamsTech.vcxproj
+++ b/DreamsTech/build_win/DreamsTech.vcxproj
@@ -804,6 +804,7 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
     <ClCompile Include="GeneralSettings.cpp" />
     <ClCompile Include="Int2.cpp" />
     <ClCompile Include="MainEditorDependencyInjectionContainer.cpp" />
+    <ClCompile Include="MvvmModel.cpp" />
     <ClCompile Include="UiManager.cpp" />
     <ClCompile Include="UiManagerBase.cpp" />
     <ClInclude Include="D:\Projects\Active\DreamsTech\DreamsTech\Classes\AppDelegate.h" />
@@ -817,6 +818,7 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
     <ClInclude Include="GeneralSettings.h" />
     <ClInclude Include="Int2.h" />
     <ClInclude Include="MainEditorDependencyInjectionContainer.h" />
+    <ClInclude Include="MvvmModel.h" />
     <ClInclude Include="UiManager.h" />
     <ClInclude Include="UiManagerBase.h" />
     <ResourceCompile Include="D:\Projects\Active\DreamsTech\DreamsTech\proj.win32\game.rc" />
